# LinearSteering

./: .gitignore  AGENTS.md  README.md  TDNV.md  main.py  pyproject.toml
dataset/: convert_steer_instruct_data.py  en_fr.json  evil.json  optimistic.json  pku_saferlhf_pos_neg_100x2.jsonl  pku_saferlhf_pos_neg_100x2_minimal.jsonl  refusal.json  safety_tasks.jsonl  steering_tasks.jsonl  sycophantic.json
scripts/: concept_vector_stability_all_models.sh  eval_harmbench_mode_generate.sh  pca_linear.sh  pca_linear_qwen3_gemma2_concepts.sh  quick_verify_pca_linear.sh  run_harmbench_modes_layers_13_17.sh  steering_linear_probe_qwen3_gemma2.sh
src/: README.md  build_pku_safety_subset.py  concept_vector_stability.py  export_minimal_safety_subset.py  extract_concepts.py  harmbench_mode_eval.py  harmbench_mode_generate.py  main.py  pca_linear.py  pku_center_token_concept.py  pku_dim_pair_stability.py  pku_tdnv.py  plot_alpha_delta_cosine.py  plot_concept_vector_stability.py  plot_lda_probe_weights.py  plot_linear.py  plot_linear_n95.py  plot_linear_probe.py  plot_linear_probe_weights.py  plot_pca_probe_eigenvectors.py  probe_utils.py  steer_harmbench_eval.py  steer_harmbench_judge.py  steering_lda_probe.py  steering_linear_probe.py  steering_pca_probe.py  utils.py
tests/: conftest.py  test_extract_concepts.py  test_harmbench_generate.py  test_pca_linear.py  test_plot_lda_probe_weights.py  test_plot_linear.py  test_plot_linear_n95.py  test_plot_linear_probe.py  test_plot_linear_probe_weights.py  test_plot_pca_probe_eigenvectors.py  test_plot_probe_utils.py  test_probe_utils.py  (+5 more)
(+81 files in other folders)
